EMacro/Compiler/EMacroParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from EMacro.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class EMacroParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TEXT_SHARP=1, TEXT_AT=2, TEXT=3, WS=4, COMMAND_SHARP=5, REPEAT=6, AREA=7, 
		VAR=8, IN=9, WRITE=10, SET=11, COLOR=12, TABLE_COLUMNS=13, DIGIT=14, ID=15, 
		JS_SHARP=16, JS_AT=17, JSTEXT=18;
	public const int
		RULE_stat = 0, RULE_command = 1, RULE_text = 2, RULE_commandStartSharp = 3, 
		RULE_commandStartAt = 4, RULE_writeCommand = 5, RULE_repeatCommand = 6, 
		RULE_setColorCommand = 7, RULE_setTableColumnsCommand = 8, RULE_jsCommand = 9;
	public static readonly string[] ruleNames = {
		"stat", "command", "text", "commandStartSharp", "commandStartAt", "writeCommand", 
		"repeatCommand", "setColorCommand", "setTableColumnsCommand", "jsCommand"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'REPEAT'", "'AREA'", "'VAR'", "'IN'", 
		"'WRITE'", "'SET'", "'COLOR'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TEXT_SHARP", "TEXT_AT", "TEXT", "WS", "COMMAND_SHARP", "REPEAT", 
		"AREA", "VAR", "IN", "WRITE", "SET", "COLOR", "TABLE_COLUMNS", "DIGIT", 
		"ID", "JS_SHARP", "JS_AT", "JSTEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "EMacro.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static EMacroParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EMacroParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EMacroParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class StatContext : ParserRuleContext {
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 0, RULE_stat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TEXT) {
				{
				State = 20; text();
				}
			}

			State = 26;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT_SHARP) | (1L << TEXT_AT) | (1L << COMMAND_SHARP) | (1L << JS_SHARP) | (1L << JS_AT))) != 0)) {
				{
				{
				State = 23; command();
				}
				}
				State = 28;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public WriteCommandContext writeCommand() {
			return GetRuleContext<WriteCommandContext>(0);
		}
		public RepeatCommandContext repeatCommand() {
			return GetRuleContext<RepeatCommandContext>(0);
		}
		public SetColorCommandContext setColorCommand() {
			return GetRuleContext<SetColorCommandContext>(0);
		}
		public SetTableColumnsCommandContext setTableColumnsCommand() {
			return GetRuleContext<SetTableColumnsCommandContext>(0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitCommand(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 33;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 29; writeCommand();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 30; repeatCommand();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 31; setColorCommand();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 32; setTableColumnsCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		public ITerminalNode TEXT() { return GetToken(EMacroParser.TEXT, 0); }
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(Context, State);
		EnterRule(_localctx, 4, RULE_text);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35; Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandStartSharpContext : ParserRuleContext {
		public ITerminalNode TEXT_SHARP() { return GetToken(EMacroParser.TEXT_SHARP, 0); }
		public ITerminalNode JS_SHARP() { return GetToken(EMacroParser.JS_SHARP, 0); }
		public ITerminalNode COMMAND_SHARP() { return GetToken(EMacroParser.COMMAND_SHARP, 0); }
		public CommandStartSharpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandStartSharp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterCommandStartSharp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitCommandStartSharp(this);
		}
	}

	[RuleVersion(0)]
	public CommandStartSharpContext commandStartSharp() {
		CommandStartSharpContext _localctx = new CommandStartSharpContext(Context, State);
		EnterRule(_localctx, 6, RULE_commandStartSharp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT_SHARP) | (1L << COMMAND_SHARP) | (1L << JS_SHARP))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandStartAtContext : ParserRuleContext {
		public ITerminalNode TEXT_AT() { return GetToken(EMacroParser.TEXT_AT, 0); }
		public ITerminalNode JS_AT() { return GetToken(EMacroParser.JS_AT, 0); }
		public CommandStartAtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandStartAt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterCommandStartAt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitCommandStartAt(this);
		}
	}

	[RuleVersion(0)]
	public CommandStartAtContext commandStartAt() {
		CommandStartAtContext _localctx = new CommandStartAtContext(Context, State);
		EnterRule(_localctx, 8, RULE_commandStartAt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			_la = TokenStream.LA(1);
			if ( !(_la==TEXT_AT || _la==JS_AT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WriteCommandContext : ParserRuleContext {
		public CommandStartSharpContext commandStartSharp() {
			return GetRuleContext<CommandStartSharpContext>(0);
		}
		public ITerminalNode WRITE() { return GetToken(EMacroParser.WRITE, 0); }
		public JsCommandContext jsCommand() {
			return GetRuleContext<JsCommandContext>(0);
		}
		public CommandStartAtContext commandStartAt() {
			return GetRuleContext<CommandStartAtContext>(0);
		}
		public WriteCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_writeCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterWriteCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitWriteCommand(this);
		}
	}

	[RuleVersion(0)]
	public WriteCommandContext writeCommand() {
		WriteCommandContext _localctx = new WriteCommandContext(Context, State);
		EnterRule(_localctx, 10, RULE_writeCommand);
		try {
			State = 48;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TEXT_SHARP:
			case COMMAND_SHARP:
			case JS_SHARP:
				EnterOuterAlt(_localctx, 1);
				{
				State = 41; commandStartSharp();
				State = 42; Match(WRITE);
				State = 43; jsCommand();
				}
				break;
			case TEXT_AT:
			case JS_AT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; commandStartAt();
				State = 46; jsCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RepeatCommandContext : ParserRuleContext {
		public CommandStartSharpContext commandStartSharp() {
			return GetRuleContext<CommandStartSharpContext>(0);
		}
		public ITerminalNode REPEAT() { return GetToken(EMacroParser.REPEAT, 0); }
		public ITerminalNode AREA() { return GetToken(EMacroParser.AREA, 0); }
		public ITerminalNode[] DIGIT() { return GetTokens(EMacroParser.DIGIT); }
		public ITerminalNode DIGIT(int i) {
			return GetToken(EMacroParser.DIGIT, i);
		}
		public ITerminalNode VAR() { return GetToken(EMacroParser.VAR, 0); }
		public ITerminalNode ID() { return GetToken(EMacroParser.ID, 0); }
		public ITerminalNode IN() { return GetToken(EMacroParser.IN, 0); }
		public JsCommandContext jsCommand() {
			return GetRuleContext<JsCommandContext>(0);
		}
		public RepeatCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_repeatCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterRepeatCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitRepeatCommand(this);
		}
	}

	[RuleVersion(0)]
	public RepeatCommandContext repeatCommand() {
		RepeatCommandContext _localctx = new RepeatCommandContext(Context, State);
		EnterRule(_localctx, 12, RULE_repeatCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; commandStartSharp();
			State = 51; Match(REPEAT);
			State = 52; Match(AREA);
			State = 53; Match(DIGIT);
			State = 54; Match(DIGIT);
			State = 55; Match(VAR);
			State = 56; Match(ID);
			State = 57; Match(IN);
			State = 58; jsCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetColorCommandContext : ParserRuleContext {
		public CommandStartSharpContext commandStartSharp() {
			return GetRuleContext<CommandStartSharpContext>(0);
		}
		public ITerminalNode SET() { return GetToken(EMacroParser.SET, 0); }
		public ITerminalNode COLOR() { return GetToken(EMacroParser.COLOR, 0); }
		public JsCommandContext jsCommand() {
			return GetRuleContext<JsCommandContext>(0);
		}
		public SetColorCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setColorCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterSetColorCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitSetColorCommand(this);
		}
	}

	[RuleVersion(0)]
	public SetColorCommandContext setColorCommand() {
		SetColorCommandContext _localctx = new SetColorCommandContext(Context, State);
		EnterRule(_localctx, 14, RULE_setColorCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60; commandStartSharp();
			State = 61; Match(SET);
			State = 62; Match(COLOR);
			State = 63; jsCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetTableColumnsCommandContext : ParserRuleContext {
		public CommandStartSharpContext commandStartSharp() {
			return GetRuleContext<CommandStartSharpContext>(0);
		}
		public ITerminalNode SET() { return GetToken(EMacroParser.SET, 0); }
		public ITerminalNode TABLE_COLUMNS() { return GetToken(EMacroParser.TABLE_COLUMNS, 0); }
		public JsCommandContext jsCommand() {
			return GetRuleContext<JsCommandContext>(0);
		}
		public SetTableColumnsCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setTableColumnsCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterSetTableColumnsCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitSetTableColumnsCommand(this);
		}
	}

	[RuleVersion(0)]
	public SetTableColumnsCommandContext setTableColumnsCommand() {
		SetTableColumnsCommandContext _localctx = new SetTableColumnsCommandContext(Context, State);
		EnterRule(_localctx, 16, RULE_setTableColumnsCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; commandStartSharp();
			State = 66; Match(SET);
			State = 67; Match(TABLE_COLUMNS);
			State = 68; jsCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JsCommandContext : ParserRuleContext {
		public ITerminalNode JSTEXT() { return GetToken(EMacroParser.JSTEXT, 0); }
		public JsCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_jsCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.EnterJsCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEMacroListener typedListener = listener as IEMacroListener;
			if (typedListener != null) typedListener.ExitJsCommand(this);
		}
	}

	[RuleVersion(0)]
	public JsCommandContext jsCommand() {
		JsCommandContext _localctx = new JsCommandContext(Context, State);
		EnterRule(_localctx, 18, RULE_jsCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; Match(JSTEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
